--- a/catalog.html
+++ b/catalog.html
@@ -168,31 +168,31 @@
               </li>
             </ul>
 
-            <button class="button pagination-show-more" type="button">Загрузить еще</button>
+            <button class="button pagination-show-more" type="button">Загрузить ещё</button>
 
             <ol class="pagination">
-              <li class="pagination-item pagination-item-button back-button">
+              <li class="pagination-item back-button">
                 <a class="pagination-link pagination-prev pagination-disabled">
                   <span class="pagination-button">Назад</span>
                 </a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-current">1</a>
+                <a class="pagination-link">1</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-current" href="#">2</a>
+                <a class="pagination-link" href="#">2</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-current" href="#">3</a>
+                <a class="pagination-link" href="#">3</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-current" href="#">...</a>
+                <a class="pagination-link" href="#">...</a>
               </li>
               <li class="pagination-item">
-                <a class="pagination-link pagination-current" href="#">15</a>
+                <a class="pagination-link" href="#">15</a>
               </li>
-              <li class="pagination-item pagination-item-button go-button">
-                <a class="pagination-link pagination-prev pagination-next" href="#">
+              <li class="pagination-item go-button">
+                <a class="pagination-link pagination-prev" href="#">
                   <span class="pagination-button">Вперёд</span>
                 </a>
               </li>
