--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,7 @@
         <div class="catalog-products-wrapper container">
           <div class="catalog-container">
             <h2 class="visually-hidden" hidden>Список товаров с фильтрами</h2>
-            <p class="product-filter">Фильтр:</p>
+            <p class="product-filter filter">Фильтр:</p>
             <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="catalog-filter-group">
                 <legend class="catalog-filter-title">Цвет</legend>
@@ -135,35 +135,43 @@
               <li class="product-card">
                 <a class="product-card-link" href="#">
                   <img class="product-card-image" src="images/catalog/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                </a>
+                <div class="card-price-wrapper">
                   <h3 class="product-card-title">Любительская<br>
                     селфи-палка</h3>
-                </a>
-                <span class="product-card-price">500 ₽</span>
-                <a class="product-card-button button" href="#">Подробнее</a>
+                  <span class="product-card-price">500 ₽</span>
+                </div>
+                <a class="product-card-button button" hidden href="#">Подробнее</a>
               </li>
               <li class="product-card">
                 <a class="product-card-link" href="#">
                   <img class="product-card-image" src="images/catalog/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-                  <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                 </a>
-                <span class="product-card-price">1 500 ₽</span>
+                <div class="card-price-wrapper">
+                  <h3 class="product-card-title">Профессиональная<br>селфи-палка</h3>
+                  <span class="product-card-price">1 500 ₽</span>
+                </div>
                 <a class="product-card-button button" href="#">Подробнее</a>
               </li>
               <li class="product-card">
                 <a class="product-card-link" href="#">
                   <img class="product-card-image" src="images/catalog/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                </a>
+                <div class="card-price-wrapper">
                   <h3 class="product-card-title">Непотопляемая<br>
                     селфи-палка</h3>
-                </a>
-                <span class="product-card-price">2 500 ₽</span>
+                  <span class="product-card-price">2 500 ₽</span>
+                </div>
                 <a class="product-card-button button" href="#">Подробнее</a>
               </li>
               <li class="product-card">
                 <a class="product-card-link" href="#">
                   <img class="product-card-image" src="images/catalog/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                  <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                 </a>
-                <span class="product-card-price">1 500 ₽</span>
+                <div class="card-price-wrapper">
+                  <h3 class="product-card-title">Селфи-палка «Следуй<br>за мной»</h3>
+                  <span class="product-card-price">1 500 ₽</span>
+                </div>
                 <a class="product-card-button button" href="#">Подробнее</a>
               </li>
             </ul>
